test/library/standard/Reflection/getFieldRef-type.1.good
getFieldRef-type.chpl:14: error: cannot return a reference to 'type' field 'x'
